--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.1.2
     volumes:
-      - ./data:/usr/share/elasticsearch/data
+      - ./data/elasticsearch:/usr/share/elasticsearch/data
     expose:
       - 9200
       - 9300
