--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
 	"name": "bitcoinfees",
 	"version": "0.0.1",
+	"license": "MIT",
+	"description": "Analytics for Bitcoin fees",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/orweinberger/bitcoinfees.git"
+	},
 	"dependencies": {
 		"bluebird": "^3.5.1",
+		"chalk": "^2.3.0",
 		"elasticsearch": "^14.0.0",
 		"request": "^2.83.0"
 	}
